# mailroom

./: .gitignore  .windsurfrules  BUG_REPORT_fetch_mcp_resource_error.md  CLAUDE.md  DOCUMENTATION_CATALOG.md  GMAIL_SETUP.md  INSTALLATION.md  README.md  TASKS.md  TASKS_COMPLETED.md  TASKS_ICEBOX.md  config.sample.toml  config.sample.yaml  mailroom.spec  pyproject.toml  render_mermaid.py  run_mcp_cli_tests.sh
.github/workflows/: code_checks.yml
debian/: changelog  control  copyright  files  mailroom.1  mailroom.manpages  mailroom.postinst.debhelper  mailroom.prerm.debhelper  mailroom.substvars
debian/examples/: config.toml
debian/mailroom/DEBIAN/: control  md5sums  postinst  prerm
debian/mailroom/usr/share/doc/mailroom/examples/: claude-code-mcp.json
docs/: AI_DEV_WORKFLOW.md  BATCH_API_DESIGN.md  COMMIT_CONVENTIONS.md  COMPLEX_SEARCH_IMPLEMENTATION.md  CONFIGURATION.md  GITHUB_ISSUES_WORKFLOW.md  GIT_INTEGRATION_CHECKLIST.md  INSTALLATION.md  LOCAL_CACHE.md
examples/: config.sample.toml  config.yaml.example  link_extraction_example.py  test_search_parser.py  work-only.sieve
formula/: mailroom.rb
imap_mcp/: cli.py  config.py  imap_client.py  models.py  resources.py  server.py  smtp_client.py  tools.py
imap_mcp/workflows/: calendar_mock.py  invite_parser.py  meeting_reply.py
mailroom/: __init__.py  __main__.py  app_password.py  auth_setup.py  browser_auth.py  config.py  gmail_auth.py  identity.py  imap_client.py  local_cache.py  markdown_render.py  mcp_protocol.py  mcp_server.py  models.py  oauth2.py  oauth2_config.py  query_parser.py  resources.py  sieve_filter.py  smtp_client.py  smtp_transport.py  tools.py
mailroom/data/: claude-command.md
mailroom/workflows/: __init__.py  calendar_mock.py  invite_parser.py  meeting_reply.py
scripts/: check_config.py  github_workflow.py  issue_status_updater.py  refresh_oauth2_token.py  render_mermaid.py  run_checks.sh  tasks_to_issues.py
tests/: conftest.py  test_app_password.py  test_auth_setup.py  test_batch_command.py  test_batch_output_format.py  test_browser_auth.py  test_chain.py  test_cli_send.py  test_config.py  test_copy.py  test_gmail_auth.py  test_identity.py  test_imap_client.py  test_imap_client_drafts.py  test_imap_client_threading.py  test_infrastructure.py  test_local_cache.py  test_markdown_render.py  test_models.py  test_oauth2_config.py  test_query_parser.py  test_resources.py  test_search_formatters.py  test_send_draft.py  test_server.py  test_sieve_filter.py  test_smtp_client_composition.py  test_smtp_transport.py  test_status_command.py  test_tasks_to_issues.py  test_tasks_to_issues_cli.py  test_tools.py  test_tools_attachments.py  test_tools_compose.py  test_tools_html_export.py  test_tools_link_extraction.py  test_tools_orchestration.py  test_tools_read.py  test_tools_reply.py  test_tools_reply_drafting.py  (+2 more)
tests/integration/: __init__.py  test_direct_tools.py  test_gmail_integration.py  test_local_cache.py  test_mcp_cli_chat.py  test_mcp_cli_integration.py  test_oauth2_gmail.py
tests/workflows/: test_calendar_mock.py  test_invite_parser.py  test_meeting_reply.py
