[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailroom"
version = "1.0.0"
description = "Email toolkit for AI assistants and command-line scripting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Weiwu Zhang"}
]
keywords = ["email", "imap", "mcp", "ai", "cli", "gmail", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "imapclient>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "typer>=0.15.0",
    "flask>=3.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=0.982",
    "pre-commit>=2.19.0",
]

[project.scripts]
mailroom = "mailroom.__main__:main"

[project.urls]
Homepage = "https://github.com/SmartLayer/mailroom"
Issues = "https://github.com/SmartLayer/mailroom/issues"
Author = "https://www.linkedin.com/in/weiwuzhang/"

[tool.setuptools]
packages = ["mailroom"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
